--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gitbook-plugin-back-to-top-button": "^0.1.4",
     "gitbook-plugin-donate": "^1.0.2",
     "gitbook-plugin-expandable-chapters": "^0.2.0",
+    "gitbook-plugin-sharing-plus": "0.0.2",
     "hexo-deployer-git": "^1.0.0",
     "shelljs": "^0.8.3"
   },
