--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "i": "npm install --save shelljs",
     "b": "gitbook install && gitbook build",
     "s": "npm run b && gitbook serve",
     "d": "npm run b && node scripts/deploy-gh-pages.js && node scripts/auto-bak.js"
